Alterando a vesao e evolindo a pipe